Aula 21/05/2025: Atualizaçao de codigo CSS, criaçao da aba especialidades.

--- a/aulas/clinica.html
+++ b/aulas/clinica.html
@@ -32,7 +32,61 @@
         </section>
 
         <section class="grid-clinica">
-            
+            <div>
+                <h3>Missao</h3>
+                <ul>
+                    <li>Oferecer Atendimento Medico Humanizado</li>
+                    <li>Promover Bem-Estar aos Pacientes</li>
+                    <li>Atua com Etica e Compromisso</li>
+                    <li>Proporcionar Diagnosticos Precisos</li>
+                </ul>
+            </div>
+            <div>
+                <h3>Visao</h3>
+                <ul>
+                    <li>Ser Referencia Medica</li>
+                    <li>Expandir Servicos e Tecnologia</li>
+                    <li>Criar um Modelo de Atendimento Acolhedor</li>
+                    <li>Ser Reconhecida pela satisfaçao dos clientes</li>
+                </ul>
+            </div>
+            <div>
+                <h3>Valores</h3>
+                <ul>
+                    <li>Etica Profissional</li>
+                    <li>Empatia</li>
+                    <li>Responsabilidade Social</li>
+                    <li>Atualizaçao constante de especialidades</li>
+                </ul>
+            </div>
+        </section>
+
+        <h2>Nossa Historia</h2>
+        <section class="grid-clinica">
+            <div class="card">
+                <h3>1970</h3>
+                <span>Inicio da Clinica</span>
+            </div>
+            <div class="card">
+                <h3>1976</h3>
+                <span>Projeto de Expansao</span>
+            </div>
+            <div class="card">
+                <h3>1985</h3>
+                <span>Primeira Filial</span>
+            </div>
+            <div class="card">
+                <h3>2000</h3>
+                <span>Segunda Filial</span>
+            </div>
+            <div class="card">
+                <h3>2011</h3>
+                <span>Projeto Modernizaçao</span>
+            </div>
+            <div class="card">
+                <h3>2024</h3>
+                <span>Terceira Filial</span>
+            </div>
         </section>
 
         <section class="voltar">
