--- a/aulas/especialidades.html
+++ b/aulas/especialidades.html
@@ -15,12 +15,46 @@
     </header>
     <main>
         <section class="destaque">
-            <h1>Especialidades Medicas da Clinica XyZ</h1>
+            <h1>Especialidades Medicas</h1>
             <p>Veja as Especialidades Medicas que Atendemos em Nossa Clinica</p>
         </section>
 
         <section class="grid-especialidades">
- 
+            <div class="card">
+                <img src="imagens/cardiologia.jpg" alt="Imagem do card">
+                <h3>Cardiologia</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit pariatur, veniam commodi repudiandae laborum quidem officia quisquam vitae qui velit expedita numquam placeat autem ratione cumque sequi beatae inventore odit.</p>
+            </div>
+
+            <div class="card">
+                <img src="imagens/geriatria.jpg" alt="Imagem do card">
+                <h3>Geriatria</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit pariatur, veniam commodi repudiandae laborum quidem officia quisquam vitae qui velit expedita numquam placeat autem ratione cumque sequi beatae inventore odit.</p>
+            </div>
+
+            <div class="card">
+                <img src="imagens/ortopedia.jpg" alt="Imagem do card">
+                <h3>Ortopedia</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit pariatur, veniam commodi repudiandae laborum quidem officia quisquam vitae qui velit expedita numquam placeat autem ratione cumque sequi beatae inventore odit.</p>
+            </div>
+
+            <div class="card">
+                <img src="imagens/otorrino.jpg" alt="Imagem do card">
+                <h3>Otorrinolaringologia</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit pariatur, veniam commodi repudiandae laborum quidem officia quisquam vitae qui velit expedita numquam placeat autem ratione cumque sequi beatae inventore odit.</p>
+            </div>
+
+            <div class="card">
+                <img src="imagens/pediatria.jpg" alt="Imagem do card">
+                <h3>Pediatria</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit pariatur, veniam commodi repudiandae laborum quidem officia quisquam vitae qui velit expedita numquam placeat autem ratione cumque sequi beatae inventore odit.</p>
+            </div>
+
+            <div class="card">
+                <img src="imagens/psicologia.jpg" alt="Imagem do card">
+                <h3>Psicologia</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit pariatur, veniam commodi repudiandae laborum quidem officia quisquam vitae qui velit expedita numquam placeat autem ratione cumque sequi beatae inventore odit.</p>
+            </div>
         </section>
 
         <section class="voltar">
