Inclusao de novas imagens, ediçao de textos e layout

--- a/site-limeira/index.html
+++ b/site-limeira/index.html
@@ -30,49 +30,44 @@ Botões com links para as páginas e perfis nas redes sociais. -->
 
             <a href="municipio.html">
                 <div class="card">
-                    <img src="imagens/Folder.png" alt="Imagem sobre o Municipio de limeira">
+                    <img src="imagens/antiga-centro.png" alt="Imagem sobre o Municipio de limeira">
                     <h3>Sobre o Municipio</h3>
                     <p>Uma historia rica, multicultural e importante para o estado de sao paulo</p>
                 </div>
             </a>
-
-            <a href="pontos.html">
-                <div class="card">
-                    <img src="imagens/Folder.png" alt="Imagem sobre o Municipio de limeira">
-                    <h3>Distancia de Acesso Na Cidade</h3>
-                    <p>Pontos de localizaçao pela cidade e distancia para acesso</p>
-                </div>
-            </a>
-
-            <a href="localizacao.html">
-                <div class="card">
-                    <img src="imagens/Folder.png" alt="Imagem sobre o Municipio de limeira">
-                    <h3>Localizaçao no Mapa</h3>
-                    <p>Visao geral da cidade em Mapa</p>
-                </div>
-            </a>
-
             <a href="turismo.html">
                 <div class="card">
-                    <img src="imagens/Folder.png" alt="Imagem sobre o Municipio de limeira">
+                    <img src="imagens/catedral-aereo.png" alt="Imagem sobre o Municipio de limeira">
                     <h3>Sobre o Turismo</h3>
                     <p>Varias dicas para conhecer a cidade e suas melhores atraçoes</p>
                 </div>
             </a>
-
             <a href="esporte.html">
                 <div class="card">
-                    <img src="imagens/Folder.png" alt="Imagem sobre o Municipio de limeira">
+                    <img src="imagens/estadio-inter.png" alt="Imagem sobre o Municipio de limeira">
                     <h3>Atletismo em Limeira</h3>
                     <p>Um pouco sobre o esporte local e sua participaçao no dia-a-dia</p>
                 </div>
             </a>
-
             <a href="comercio.html">
                 <div class="card">
-                    <img src="imagens/Folder.png" alt="Imagem sobre o Municipio de limeira">
+                    <img src="imagens/comercio.jpg" alt="Imagem sobre o Municipio de limeira">
                     <h3>Sobre o Comercio</h3>
                     <p>Um pouco sobre o comercio local</p>
+                </div>
+            </a>
+            <a href="pontos.html">
+                <div class="card">
+                    <img src="imagens/acesso.png" alt="Imagem sobre o Municipio de limeira">
+                    <h3>Distancia de Acesso Na Cidade</h3>
+                    <p>Pontos de localizaçao pela cidade e distancia para acesso</p>
+                </div>
+            </a>
+            <a href="localizacao.html">
+                <div class="card">
+                    <img src="imagens/mapa-limeira.jpg" alt="Imagem sobre o Municipio de limeira">
+                    <h3>Localizaçao no Mapa</h3>
+                    <p>Visao geral da cidade em Mapa</p>
                 </div>
             </a>
         </section>
