--- a/site-limeira/turismo.html
+++ b/site-limeira/turismo.html
@@ -18,7 +18,7 @@
     </header>
     <main>
         <section class="destaque">
-            <h1>Guia do Turismo Local</h1>
+            <h1>Turismo Local</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat nemo odit, at dolorum earum ipsa a
                 saepe quibusdam. Mollitia, incidunt voluptatum repellat culpa a amet eligendi iusto asperiores ad nisi?
             </p>
@@ -36,7 +36,7 @@
 
         <section class="grid-turismo">
             <div>
-                <img src="imagens/Folder.png" alt="Imagem sobre o Municipio de limeira">
+                <img src="imagens/horto-limeira.jpg" alt="Imagem sobre o Municipio de limeira">
                 <h2>Horto Florestal de Limeira</h2>
                 <p>Um espaço de preservação ambiental que oferece contato direto com a natureza. O Horto possui trilhas
                     ecológicas, áreas para contemplação, viveiro de mudas e é um local importante para a educação
@@ -46,7 +46,7 @@
 
         <section class="grid-turismo">
             <div>
-                <img src="imagens/Folder.png" alt="Imagem sobre o Municipio de limeira">
+                <img src="imagens/museu-limeira.jpg" alt="Imagem sobre o Municipio de limeira">
                 <h2>Museu Histórico Major José Levy Sobrinho</h2>
                 <p>Localizado em um belo casarão antigo, o museu preserva a história de Limeira e da região. Seu acervo
                     conta com objetos, documentos e fotografias que remontam ao passado da cidade, desde a época da
@@ -57,7 +57,7 @@
 
         <section class="grid-turismo">
             <div>
-                <img src="imagens/Folder.png" alt="Imagem sobre o Municipio de limeira">
+                <img src="imagens/praca.jpg" alt="Imagem sobre o Municipio de limeira">
                 <h2>Praça Toledo Barros</h2>
                 <p>Uma das praças mais tradicionais e movimentadas de Limeira, a Praça Toledo Barros é um ponto de
                     referência no centro da cidade. Arborizada e com bancos, é um local agradável para sentar, observar
@@ -67,7 +67,7 @@
 
         <section class="grid-turismo">
             <div>
-                <img src="imagens/Folder.png" alt="Imagem sobre o Municipio de limeira">
+                <img src="imagens/shopping.jpg" alt="Imagem sobre o Municipio de limeira">
                 <h2>Shopping Pátio Limeira</h2>
                 <p>Para quem busca compras, entretenimento e gastronomia, o Shopping Pátio Limeira é uma excelente
                     opção. Conta com diversas lojas, praça de alimentação variada, cinemas e eventos sazonais. É um
