--- a/aulas/servicos.html
+++ b/aulas/servicos.html
@@ -20,7 +20,171 @@
         </section>
 
         <section class="grid-servicos">
- 
+            <h2>Tabela 1</h2>
+            <table class="tabela1">
+                <thead>
+                    <tr>                            <!--<TR> Cria uma Linha -->
+                        <th>Codigo</th>             <!--<TH> Cria uma Coluna de cabeçalho -->
+                        <th>Descriçao</th>
+                        <th>Preço</th>
+                        <th>Prazo</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>001</td>                <!--<TH> Cria uma Coluna comum -->
+                        <td>Serviço Numero Um</td>
+                        <td>R$500,00</td>
+                        <td>15 dias</td>
+                    </tr>
+                    <tr>
+                        <td>002</td>
+                        <td>Serviço Numero Dois</td>
+                        <td>R$845,00</td>
+                        <td>2 Semanas</td>
+                    </tr>
+                    <tr>
+                        <td>003</td>
+                        <td>Serviço Numero Tres</td>
+                        <td>R$1.580,00</td>
+                        <td>3 Meses</td>
+                    </tr>
+                    <tr>
+                        <td>004</td>
+                        <td>Serviço Numero Quatro</td>
+                        <td>R$145,00</td>
+                        <td>3 dias</td>
+                    </tr>
+                    <tr>
+                        <td>005</td>
+                        <td>Serviço Numero Cinco</td>
+                        <td>R$935,00</td>
+                        <td>3 Semanas</td>
+                    </tr>
+                    <tr>
+                        <td>006</td>
+                        <td>Serviço Numero Seis</td>
+                        <td>R$50,00</td>
+                        <td>2 dias</td>
+                    </tr>
+                    <tr>
+                        <td>007</td>
+                        <td>Serviço Numero Sete</td>
+                        <td>R$1.230,00</td>
+                        <td>65 dias</td>
+                    </tr>
+                </tbody>
+            </table>
+            <h2>Tabela 2</h2>
+            <table class="tabela2">
+                <thead>
+                    <tr>                            <!--<TR> Cria uma Linha -->
+                        <th>Codigo</th>             <!--<TH> Cria uma Coluna de cabeçalho -->
+                        <th>Descriçao</th>
+                        <th>Preço</th>
+                        <th>Prazo</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>001</td>                <!--<TH> Cria uma Coluna comum -->
+                        <td>Serviço Numero Um</td>
+                        <td>R$500,00</td>
+                        <td>15 dias</td>
+                    </tr>
+                    <tr>
+                        <td>002</td>
+                        <td>Serviço Numero Dois</td>
+                        <td>R$845,00</td>
+                        <td>2 Semanas</td>
+                    </tr>
+                    <tr>
+                        <td>003</td>
+                        <td>Serviço Numero Tres</td>
+                        <td>R$1.580,00</td>
+                        <td>3 Meses</td>
+                    </tr>
+                    <tr>
+                        <td>004</td>
+                        <td>Serviço Numero Quatro</td>
+                        <td>R$145,00</td>
+                        <td>3 dias</td>
+                    </tr>
+                    <tr>
+                        <td>005</td>
+                        <td>Serviço Numero Cinco</td>
+                        <td>R$935,00</td>
+                        <td>3 Semanas</td>
+                    </tr>
+                    <tr>
+                        <td>006</td>
+                        <td>Serviço Numero Seis</td>
+                        <td>R$50,00</td>
+                        <td>2 dias</td>
+                    </tr>
+                    <tr>
+                        <td>007</td>
+                        <td>Serviço Numero Sete</td>
+                        <td>R$1.230,00</td>
+                        <td>65 dias</td>
+                    </tr>
+                </tbody>
+            </table>
+            <h2>Tabela 3</h2>
+            <table class="tabela3">
+                <thead>
+                    <tr>                            <!--<TR> Cria uma Linha -->
+                        <th>Codigo</th>             <!--<TH> Cria uma Coluna de cabeçalho -->
+                        <th>Descriçao</th>
+                        <th>Preço</th>
+                        <th>Prazo</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>001</td>                <!--<TH> Cria uma Coluna comum -->
+                        <td>Serviço Numero Um</td>
+                        <td>R$500,00</td>
+                        <td>15 dias</td>
+                    </tr>
+                    <tr>
+                        <td>002</td>
+                        <td>Serviço Numero Dois</td>
+                        <td>R$845,00</td>
+                        <td>2 Semanas</td>
+                    </tr>
+                    <tr>
+                        <td>003</td>
+                        <td>Serviço Numero Tres</td>
+                        <td>R$1.580,00</td>
+                        <td>3 Meses</td>
+                    </tr>
+                    <tr>
+                        <td>004</td>
+                        <td>Serviço Numero Quatro</td>
+                        <td>R$145,00</td>
+                        <td>3 dias</td>
+                    </tr>
+                    <tr>
+                        <td>005</td>
+                        <td>Serviço Numero Cinco</td>
+                        <td>R$935,00</td>
+                        <td>3 Semanas</td>
+                    </tr>
+                    <tr>
+                        <td>006</td>
+                        <td>Serviço Numero Seis</td>
+                        <td>R$50,00</td>
+                        <td>2 dias</td>
+                    </tr>
+                    <tr>
+                        <td>007</td>
+                        <td>Serviço Numero Sete</td>
+                        <td>R$1.230,00</td>
+                        <td>65 dias</td>
+                    </tr>
+                </tbody>
+            </table>
         </section>
 
         <section class="voltar">
