--- a/site-limeira/municipio.html
+++ b/site-limeira/municipio.html
@@ -23,18 +23,13 @@
             <p>A história de Limeira tem suas raízes em meados do século XIX, quando a região era conhecida como "Morro Agudo". Em 1826, Rafael Tobias de Aguiar, futuro Barão de Monte Alegre, adquiriu terras na área e instalou um engenho de açúcar. Ao redor desse engenho, começou a surgir um pequeno povoado. Em 1830, foi criada a Freguesia de Nossa Senhora da Conceição de Limeira, marcando o reconhecimento oficial do povoado. O nome "Limeira" é atribuído à grande quantidade de pés de lima existentes na região.</p>
         </section>
 
-        <section class="grid-municipio">
-            <div>
-                <img src="imagens/antiga-centro.png" alt="Imagem sobre o Municipio de limeira">
-            </div>
-            <div>
-                <h2>Nascimento da Cidade</h2>
-                <p>As primeiras notícias sobre a região onde hoje está localizada a cidade de Limeira datam de 1682, quando o bandeirante Bartolomeu Bueno da Silva penetrou pelo interior do país em direção à Goiás. Posteriormente, já em 1722, seu filho, também denominado Bartolomeu Bueno da Silva, refez o caminho do pai, passando por esta região onde já havia um rancho tosco, sustentado por quatro grossos troncos de árvores e coberto com folhas secas.Esse rancho ficava à 27 léguas (162 Km) da cidade de São Paulo, às margens de um ribeirão denominado de Tatuhiby, e que servia de pouso para viajantes que iam em direção ao interior do país. A região era conhecida como Sertão do Tatuhiby e o pouso denominado de Rancho do Morro Azul, pois os viajantes ao se aproximarem do local avistavam uma elevação arredondada, colorida de azul. Posteriormente ficou conhecido como Rancho da Limeira.A estrada, aberta no meio da vegetação, era utilizada também por tropeiros vindos do Sul, carregados de mantimentos, levando animais de transporte e correspondências para a região das minas.
-                Conta-se que por volta de 1.781, uma caravana paulista passando pelo local, trouxe consigo o Frei João das Mercês, que levava uma porção de limas em seu picuá. O Frei adoeceu, acometido de febres altíssimas, delirava dizendo que as limas estavam envenenadas. Vindo a falecer, foi enterrado, com seu picuá, próximo ao rancho. Tempo depois, nesse local, nasceu uma limeira, e o pouso passou a ser conhecido como Rancho da Limeira.
-                </p>
-            </div>
+        <section class="foto-municipio">
+            <img src="imagens/antiga-centro.png" alt="Imagem sobre o Municipio de limeira">
+            <h2>Nascimento da Cidade</h2>
+            <p>As primeiras notícias sobre a região onde hoje está localizada a cidade de Limeira datam de 1682, quando o bandeirante Bartolomeu Bueno da Silva penetrou pelo interior do país em direção à Goiás. Posteriormente, já em 1722, seu filho, também denominado Bartolomeu Bueno da Silva, refez o caminho do pai, passando por esta região onde já havia um rancho tosco, sustentado por quatro grossos troncos de árvores e coberto com folhas secas.Esse rancho ficava à 27 léguas (162 Km) da cidade de São Paulo, às margens de um ribeirão denominado de Tatuhiby, e que servia de pouso para viajantes que iam em direção ao interior do país. A região era conhecida como Sertão do Tatuhiby e o pouso denominado de Rancho do Morro Azul, pois os viajantes ao se aproximarem do local avistavam uma elevação arredondada, colorida de azul. Posteriormente ficou conhecido como Rancho da Limeira.A estrada, aberta no meio da vegetação, era utilizada também por tropeiros vindos do Sul, carregados de mantimentos, levando animais de transporte e correspondências para a região das minas.</p>
+            <p>Conta-se que por volta de 1.781, uma caravana paulista passando pelo local, trouxe consigo o Frei João das Mercês, que levava uma porção de limas em seu picuá. O Frei adoeceu, acometido de febres altíssimas, delirava dizendo que as limas estavam envenenadas. Vindo a falecer, foi enterrado, com seu picuá, próximo ao rancho. Tempo depois, nesse local, nasceu uma limeira, e o pouso passou a ser conhecido como Rancho da Limeira.</p>
         </section>
-
+        
         <section class="grid-municipio">
             <div>
                 <img src="imagens/catedral-aereo.png" alt="Imagem sobre o Municipio de limeira">
