28-05-2025 Criaçao das paginas de fotos, videos. Atualizaçao do banco de imagens e midias

--- a/aulas/fotos.html
+++ b/aulas/fotos.html
@@ -20,7 +20,23 @@
         </section>
 
         <section class="fotos">
- 
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores facilis repudiandae facere? Eveniet magni vitae voluptas corporis? Non nobis consequuntur quia harum ea enim, dolor repellendus vero iste! Aspernatur, impedit.</p>
+            
+            <div class="galeria-destaque">
+                <img src="imagens-ia/foto1.jpg" alt="Ilustraçao de paisagem da natureza">
+            </div>
+            <div class="galeria-miniatura">
+                <img src="imagens-ia/foto1.jpg" alt="Ilustraçao de paisagem da natureza">
+                <img src="imagens-ia/foto2.jpg" alt="Ilustraçao de paisagem da natureza">
+                <img src="imagens-ia/foto3.jpg" alt="Ilustraçao de paisagem da natureza">
+                <img src="imagens-ia/foto4.jpg" alt="Ilustraçao de paisagem da natureza">
+                <img src="imagens-ia/foto5.jpg" alt="Ilustraçao de paisagem da natureza">
+                <img src="imagens-ia/foto6.jpg" alt="Ilustraçao de paisagem da natureza">
+                <img src="imagens-ia/foto7.jpg" alt="Ilustraçao de paisagem da natureza">
+                <img src="imagens-ia/foto8.jpg" alt="Ilustraçao de paisagem da natureza">
+                <img src="imagens-ia/foto9.jpg" alt="Ilustraçao de paisagem da natureza">
+                <img src="imagens-ia/foto10.jpg" alt="Ilustraçao de paisagem da natureza">
+            </div>
         </section>
 
         <section class="voltar">
