--- a/aulas/video.html
+++ b/aulas/video.html
@@ -19,8 +19,15 @@
             <p>Videos Da Nossa Clinica</p>
         </section>
 
-        <section class="video">
- 
+        <section class="videos">
+            <h2>Video em HTML</h2>
+            <video src="midias/video.mp4" controls></video>
+            
+            <h2>Audio em HTML</h2>
+            <audio src="midias/audio.mp3" controls></audio>
+
+            <h2>Video do Youtube</h2>
+            <iframe src="https://www.youtube.com/embed/BTMjD7_evjE?si=uBZDjNLbLJqCzMsa" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </section>
 
         <section class="voltar">
