--- a/aulas/convenio.html
+++ b/aulas/convenio.html
@@ -20,7 +20,36 @@
         </section>
 
         <section class="grid-convenios">
- 
+            <div class="card">
+                <i class="bi bi-clipboard2-pulse-fill"></i>
+                <p>Convenio da Prefeitura</p>
+
+                <i class="bi bi-clipboard-heart"></i>
+                <p>Uniao dos Medicos do Brasil</p>
+
+                <i class="bi bi-clipboard2-check-fill"></i>
+                <h3>Plano de Saude do Estado</h3>
+                
+                <i class="bi bi-clipboard2-heart"></i>
+                <h3>Plano de Saude da Uniao</h3>
+
+                <i class="bi bi-file-medical"></i>
+                <h3>Convenio XyZ</h3>
+
+                <i class="bi bi-journal-bookmark-fill"></i>
+                <h3>Convenio SUS</h3>
+
+                <i class="bi bi-person-badge"></i>
+                <h3>Plano de Saude de Limeira</h3>
+
+                <i class="bi bi-bookmark-x-fill"></i>
+                <h3>Plano de Saude Dos Bons</h3>
+
+                <i class="bi bi-journal-bookmark"></i>
+                <h3>Plano de Saude de Piracicaba</h3>
+
+                <i class="bi bi-file-earmark-text"></i>
+                <h3>Plano de Saude doe Campinas</h3>
         </section>
 
         <section class="voltar">
