--- a/site-limeira/municipio.html
+++ b/site-limeira/municipio.html
@@ -17,24 +17,25 @@
     <header>
         <img src="imagens/cabecalho-bandeira.png" alt="Cabeçalho da Pagina">
     </header>
+
     <main>
         <section class="destaque">
             <h1>Guia do Municipio</h1>
             <p>A história de Limeira tem suas raízes em meados do século XIX, quando a região era conhecida como "Morro Agudo". Em 1826, Rafael Tobias de Aguiar, futuro Barão de Monte Alegre, adquiriu terras na área e instalou um engenho de açúcar. Ao redor desse engenho, começou a surgir um pequeno povoado. Em 1830, foi criada a Freguesia de Nossa Senhora da Conceição de Limeira, marcando o reconhecimento oficial do povoado. O nome "Limeira" é atribuído à grande quantidade de pés de lima existentes na região.</p>
         </section>
 
-        <section class="foto-municipio">
-            <img src="imagens/antiga-centro.png" alt="Imagem sobre o Municipio de limeira">
-            <h2>Nascimento da Cidade</h2>
-            <p>As primeiras notícias sobre a região onde hoje está localizada a cidade de Limeira datam de 1682, quando o bandeirante Bartolomeu Bueno da Silva penetrou pelo interior do país em direção à Goiás. Posteriormente, já em 1722, seu filho, também denominado Bartolomeu Bueno da Silva, refez o caminho do pai, passando por esta região onde já havia um rancho tosco, sustentado por quatro grossos troncos de árvores e coberto com folhas secas.Esse rancho ficava à 27 léguas (162 Km) da cidade de São Paulo, às margens de um ribeirão denominado de Tatuhiby, e que servia de pouso para viajantes que iam em direção ao interior do país. A região era conhecida como Sertão do Tatuhiby e o pouso denominado de Rancho do Morro Azul, pois os viajantes ao se aproximarem do local avistavam uma elevação arredondada, colorida de azul. Posteriormente ficou conhecido como Rancho da Limeira.A estrada, aberta no meio da vegetação, era utilizada também por tropeiros vindos do Sul, carregados de mantimentos, levando animais de transporte e correspondências para a região das minas.</p>
-            <p>Conta-se que por volta de 1.781, uma caravana paulista passando pelo local, trouxe consigo o Frei João das Mercês, que levava uma porção de limas em seu picuá. O Frei adoeceu, acometido de febres altíssimas, delirava dizendo que as limas estavam envenenadas. Vindo a falecer, foi enterrado, com seu picuá, próximo ao rancho. Tempo depois, nesse local, nasceu uma limeira, e o pouso passou a ser conhecido como Rancho da Limeira.</p>
+        <section class="grid-municipio">
+            <div>
+                <img class="foto-municipio" src="imagens/antiga-centro.png" alt="Imagem sobre o Municipio de limeira">
+                <h2>Nascimento da Cidade</h2>
+                <p>As primeiras notícias sobre a região onde hoje está localizada a cidade de Limeira datam de 1682, quando o bandeirante Bartolomeu Bueno da Silva penetrou pelo interior do país em direção à Goiás. Posteriormente, já em 1722, seu filho, também denominado Bartolomeu Bueno da Silva, refez o caminho do pai, passando por esta região onde já havia um rancho tosco, sustentado por quatro grossos troncos de árvores e coberto com folhas secas.Esse rancho ficava à 27 léguas (162 Km) da cidade de São Paulo, às margens de um ribeirão denominado de Tatuhiby, e que servia de pouso para viajantes que iam em direção ao interior do país. A região era conhecida como Sertão do Tatuhiby e o pouso denominado de Rancho do Morro Azul, pois os viajantes ao se aproximarem do local avistavam uma elevação arredondada, colorida de azul. Posteriormente ficou conhecido como Rancho da Limeira.A estrada, aberta no meio da vegetação, era utilizada também por tropeiros vindos do Sul, carregados de mantimentos, levando animais de transporte e correspondências para a região das minas.</p>
+                <p>Conta-se que por volta de 1.781, uma caravana paulista passando pelo local, trouxe consigo o Frei João das Mercês, que levava uma porção de limas em seu picuá. O Frei adoeceu, acometido de febres altíssimas, delirava dizendo que as limas estavam envenenadas. Vindo a falecer, foi enterrado, com seu picuá, próximo ao rancho. Tempo depois, nesse local, nasceu uma limeira, e o pouso passou a ser conhecido como Rancho da Limeira.</p>
+            </div>
         </section>
         
         <section class="grid-municipio">
             <div>
                 <img src="imagens/catedral-aereo.png" alt="Imagem sobre o Municipio de limeira">
-            </div>
-            <div>
                 <h2>Economia</h2>
                 <p>Ao longo do século XIX, a cultura do café ganhou grande importância na região de Limeira, impulsionando seu desenvolvimento econômico e atraindo imigrantes, principalmente italianos, que trouxeram sua cultura e força de trabalho. Em 1863, Limeira foi elevada à categoria de vila, e em 1877, tornou-se município. A chegada da ferrovia também foi um marco importante para o escoamento da produção agrícola. No século XX, a diversificação econômica começou a ocorrer, com a instalação de indústrias, principalmente nos setores metalúrgico, de máquinas e equipamentos e de autopeças.
                 Entre 2006 e 2021, o crescimento do PIB municipal foi um dos melhores da região imediata. Recentemente, a cidade teve um crescimento nominal do nível de atividade de 110,5% nos últimos dez anos e 36,3% nos últimos cinco anos. O PIB da cidade é de aproximadamente R$ 13,7 bilhões.
@@ -46,8 +47,6 @@
         <section class="grid-municipio">
             <div>
                 <img src="imagens/cultura-orquestra.jpg" alt="Imagem sobre o Municipio de limeira">
-            </div>
-            <div>
                 <h2>Cultura</h2>
                 <p>A cultura de Limeira é rica e influenciada pela miscigenação de povos que formaram a cidade. As tradições italianas, africanas e portuguesas se manifestam na culinária, nas festas e nas manifestações artísticas. A cidade conta com diversos espaços culturais, como teatros, museus e centros culturais, que oferecem programação variada ao longo do ano. Destacam-se a Festa do Peão de Limeira, um dos maiores rodeios do Brasil, e a Exposição Agropecuária, Industrial e Comercial de Limeira (EAPIC).
                 Limeira é uma cidade com uma história rica e um presente dinâmico, que equilibra seu desenvolvimento econômico com a preservação de sua cultura e tradições.</p>
