Atualizaçao do banco de imagens, correçao de codigo, modificaçao das paginas turismo-comercio-esporte

--- a/site-limeira/esporte.html
+++ b/site-limeira/esporte.html
@@ -27,7 +27,6 @@ Pode-se incluir fotos ou vídeos de estádios ou ginásio de esportes no municí
         </section>
         <div>
             <section class="grid-esporte">
-                <video src="#"></video>
                 <h2>Futebol</h2>
                 <p>Sem dúvida, o futebol é um dos esportes mais enraizados em Limeira. A cidade é casa da Associação
                     Atlética Internacional (Inter de Limeira), um clube com história no cenário paulista, que já
@@ -37,33 +36,34 @@ Pode-se incluir fotos ou vídeos de estádios ou ginásio de esportes no municí
                     futebol amador é muito forte em Limeira, com campeonatos municipais envolvendo dezenas de times e
                     grande participação da comunidade, como o tradicional Campeonato Amador de Limeira e o Torneio 1º de
                     Maio.</p>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/JcVdiVbMdbw?si=sCjUxa0BQq6SN798" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </section>
 
             <section class="grid-esporte">
-                <video src="#"></video>
                 <h2>Basquete</h2>
                 <p>A cidade já teve representação em ligas de alto nível, como a Associação Limeirense de Basquete
                     (Winner Limeira Basquete), que participou da Liga Nacional de Basquete (LNB) e de campeonatos
                     estaduais (Campeonato Paulista). Embora o time principal tenha sido extinto, a modalidade ainda é
                     praticada, e equipes de Limeira podem participar de Superligas regionais de basquete 3x3, como a
                     Superliga ANB 3x3, ou outras ligas de base e amadoras que abrangem a região.</p>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/dmiko41k8JI?si=Y50FUMI9rV2_q4D3" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </section>
 
             <section class="grid-esporte">
-                <video src="#"></video>
                 <h2>Voleibol</h2>
                 <p>Clubes como o Nosso Clube Limeira e a AABB Limeira participam ativamente de competições de vôlei. Há
                     a Liga Regional de Voleibol de Campinas, da qual equipes de Limeira, incluindo as da AABB,
                     participam em diversas categorias de base, visando o desenvolvimento técnico e competitivo.</p>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/202ZJ28EruA?si=BBccT88yUKTkVvCM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </section>
 
         <section class="grid-esporte">
-            <video src="#"></video>
             <h2>Atletismo</h2>
             <p>A Associação Limeirense de Atletismo (ALA) e a Organização Limeirense de Atletismo são entidades que
                 fomentam o atletismo na cidade. Elas podem participar de eventos e ligas promovidos pela Federação
                 Paulista de Atletismo (FPA) ou pela Liga SESI-SP de Treinamento Esportivo de Atletismo, no caso de
                 equipes ligadas ao SESI.</p>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/IqEVnKj1kiI?si=a2hxnWsM1Prhstrg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
         </section>
 
