--- a/site-limeira/municipio.html
+++ b/site-limeira/municipio.html
@@ -35,7 +35,7 @@
         
         <section class="grid-municipio">
             <div>
-                <img src="imagens/catedral-aereo.png" alt="Imagem sobre o Municipio de limeira">
+                <img class="foto-catedral" src="imagens/catedral-aereo.png" alt="Imagem sobre o Municipio de limeira">
                 <h2>Economia</h2>
                 <p>Ao longo do século XIX, a cultura do café ganhou grande importância na região de Limeira, impulsionando seu desenvolvimento econômico e atraindo imigrantes, principalmente italianos, que trouxeram sua cultura e força de trabalho. Em 1863, Limeira foi elevada à categoria de vila, e em 1877, tornou-se município. A chegada da ferrovia também foi um marco importante para o escoamento da produção agrícola. No século XX, a diversificação econômica começou a ocorrer, com a instalação de indústrias, principalmente nos setores metalúrgico, de máquinas e equipamentos e de autopeças.
                 Entre 2006 e 2021, o crescimento do PIB municipal foi um dos melhores da região imediata. Recentemente, a cidade teve um crescimento nominal do nível de atividade de 110,5% nos últimos dez anos e 36,3% nos últimos cinco anos. O PIB da cidade é de aproximadamente R$ 13,7 bilhões.
@@ -46,7 +46,7 @@
 
         <section class="grid-municipio">
             <div>
-                <img src="imagens/cultura-orquestra.jpg" alt="Imagem sobre o Municipio de limeira">
+                <img class="foto-municipio" src="imagens/cultura-orquestra.jpg" alt="Imagem sobre o Municipio de limeira">
                 <h2>Cultura</h2>
                 <p>A cultura de Limeira é rica e influenciada pela miscigenação de povos que formaram a cidade. As tradições italianas, africanas e portuguesas se manifestam na culinária, nas festas e nas manifestações artísticas. A cidade conta com diversos espaços culturais, como teatros, museus e centros culturais, que oferecem programação variada ao longo do ano. Destacam-se a Festa do Peão de Limeira, um dos maiores rodeios do Brasil, e a Exposição Agropecuária, Industrial e Comercial de Limeira (EAPIC).
                 Limeira é uma cidade com uma história rica e um presente dinâmico, que equilibra seu desenvolvimento econômico com a preservação de sua cultura e tradições.</p>
