--- a/site-limeira/comercio.html
+++ b/site-limeira/comercio.html
@@ -25,25 +25,52 @@ Shopping, Principais supermercados, Outros pontos comerciais relevantes -->
         </section>
 
         <section class="grid-comercio">
-            <img src="imagens/Folder.png" alt="">
-            <h2>Centro Comercial Tradicional</h2>
-            <p>O coração do comércio de Limeira ainda pulsa forte na região central. As ruas do centro abrigam uma grande variedade de estabelecimentos, desde lojas de vestuário e calçados até eletrônicos, perfumarias e lojas de departamento.</p>
-            <ul>
-                <li>Rua Santa Cruz: É uma das ruas mais tradicionais e movimentadas do centro, conhecida pela variedade de estabelecimentos e por ser um ponto de referência para os consumidores.</li>
-                <li>Ruas como Dr. Trajano de Barros Camargo, Barão de Cascalho, 13 de Maio, entre outras, também concentram um grande número de lojas e serviços, mantendo a característica de comércio de rua.</li>
-            </ul>
-            <video src="#"></video>
+            <div class="turismo-miniatura">
+                <img src="imagens/comercio-centro (1).png" alt="Imagem de Rua Movimentada na cidade de Limeira">
+                <img src="imagens/comercio-centro (2).png" alt="Imagem de Rua Movimentada na cidade de Limeira">
+                <img src="imagens/comercio-centro (3).png" alt="Imagem de Rua Movimentada na cidade de Limeira">
+            </div>
+            <div>
+                 <h2>Centro Comercial Tradicional</h2>
+                <p>O coração do comércio de Limeira ainda pulsa forte na região central. As ruas do centro abrigam uma grande variedade de estabelecimentos, desde lojas de vestuário e calçados até eletrônicos, perfumarias e lojas de departamento.</p>
+                <ul>
+                    <li>Rua Santa Cruz: É uma das ruas mais tradicionais e movimentadas do centro, conhecida pela variedade de estabelecimentos e por ser um ponto de referência para os consumidores.</li>
+                    <li>Ruas como Dr. Trajano de Barros Camargo, Barão de Cascalho, 13 de Maio, entre outras, também concentram um grande número de lojas e serviços, mantendo a característica de comércio de rua.</li>
+                </ul>
+            </div> 
         </section>
 
         <section class="grid-comercio">
-            <img src="imagens/Folder.png" alt="">
-            <h2>Shoppings Centers</h2>
+            <div class="turismo-miniatura">
+                <img src="imagens/comercio-shopping (1).png" alt="Imagem de Faxada de Shopping Center">
+                <img src="imagens/comercio-shopping (2).png" alt="Imagem de Faxada de Shopping Center">
+                <img src="imagens/comercio-shopping (3).png" alt="Imagem de Faxada de Shopping Center">
+            </div>
+            <div>
+                <h2>Shoppings Centers</h2>
             <p>Limeira conta com centros comerciais modernos que oferecem uma experiência de compra mais completa, com lojas de grandes redes, praças de alimentação e lazer.</p>
             <ul>
                 <li>Shopping Pátio Limeira: Um dos principais shoppings da cidade, oferece uma vasta gama de lojas, opções de gastronomia e salas de cinema. Possui também uma torre comercial anexa, o Pátio Office.</li>
                 <li>Shopping Center Limeira: Outro importante shopping da cidade, que também agrega diversas lojas, serviços e opções de lazer e alimentação.</li>
+                <li>O Shopping Nações de Limeira está temporariamente fechado, com previsão de reabrir com um novo perfil. A suspensão das operações foi antecipada devido à pandemia, mas a mudança de perfil estava planejada há algum tempo. </li>
             </ul>
-            <video src="#"></video>
+            </div>
+        </section>
+
+        <section class="grid-comercio">
+            <div class="turismo-miniatura">
+                <img src="imagens/comercio-joias (1).png" alt="Imagem de faxa de loja de semi-joias">
+                <img src="imagens/comercio-joias (2).png" alt="Imagem de faxa de loja de semi-joias">
+                <img src="imagens/comercio-joias (3).png" alt="Imagem de faxa de loja de semi-joias">
+            </div>
+            <div>
+                <h2>Comercio de Semi-Joias</h2>
+            <p>Limeira recebeu o título de capital das semijoias por se destacar no cenário nacional. Além dos pontos mencionados acima, vale ainda destacar que desde 2009 o município fomenta esse mercado, com mais de 30 mil pessoas trabalhando de forma direta ou indireta. A cidade abriga mais de 500 empresas formalizadas, e produzem em média 50 toneladas de produtos mensais.</p>
+            <ul>
+                <li>Em Limeira, o maior volume de lojas de semijoias encontra-se na Avenida Marechal Arthur da Costa e Silva, também conhecida como Avenida da Semijoia, no Jardim Glória. Esta avenida é considerada a principal área comercial da cidade para semijoias, bijuterias e joias. </li>
+                <li>Há também a Rua da Alegria, que é um ponto de encontro para quem gosta de joias, semijoias e bijuterias. </li>
+            </ul>
+            </div>
         </section>
 
         <section class="voltar">
