--- a/site-limeira/localizacao.html
+++ b/site-limeira/localizacao.html
@@ -19,9 +19,7 @@ Reduzido mostrando apenas a cidade, Street View focando um ponto relevante da ci
     </header>
     <main>
         <section class="destaque">
-            <h1>Guia de Localizaçao</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat nemo odit, at dolorum earum ipsa a saepe quibusdam. Mollitia, incidunt voluptatum repellat culpa a amet eligendi iusto asperiores ad nisi?</p>
-        </section>
+            <h1>Mapa de Localizaçao</h1>
 
         <section class="grid-localizacao">
             <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d24785.265860615717!2d-47.41080401502746!3d-22.565941451467157!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1spt-BR!2sbr!4v1748119634186!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
