--- a/site-limeira/turismo.html
+++ b/site-limeira/turismo.html
@@ -26,52 +26,104 @@
 
         <section class="grid-turismo">
             <div>
-                <img src="imagens/Folder.png" alt="Imagem sobre o Municipio de limeira">
                 <h2>Parque Cidade</h2>
                 <p>Este é um dos principais espaços verdes de Limeira, ideal para caminhadas, piqueniques e atividades
                     ao ar livre. Possui ampla área verde, lago, playground, pistas de caminhada e ciclovia. É um local
                     muito procurado pelas famílias limeirenses e visitantes para lazer e prática de exercícios.</p>
+                <div class="turismo-destaque">
+                    <img src="imagens/parque-cidade-de-limeira.jpg" alt="Imagem sobre o Municipio de limeira">
+                </div>
+                <div class="turismo-miniatura">
+                    <img src="imagens/parque-cidade (1).png" alt="Imagem sobre o Parque Cidade">
+                    <img src="imagens/parque-cidade (2).png" alt="Imagem sobre o Parque Cidade">
+                    <img src="imagens/parque-cidade (3).png" alt="Imagem sobre o Parque Cidade">
+                    <img src="imagens/parque-cidade (4).png" alt="Imagem sobre o Parque Cidade">
+                    <img src="imagens/parque-cidade (5).png" alt="Imagem sobre o Parque Cidade">
+                    <img src="imagens/parque-cidade (6).png" alt="Imagem sobre o Parque Cidade">
+                </div>
             </div>
         </section>
 
         <section class="grid-turismo">
             <div>
-                <img src="imagens/horto-limeira.jpg" alt="Imagem sobre o Municipio de limeira">
                 <h2>Horto Florestal de Limeira</h2>
                 <p>Um espaço de preservação ambiental que oferece contato direto com a natureza. O Horto possui trilhas
                     ecológicas, áreas para contemplação, viveiro de mudas e é um local importante para a educação
                     ambiental. É uma ótima opção para quem busca tranquilidade e quer aprender sobre a flora local.</p>
+                <div class="turismo-destaque">
+                    <img src="imagens/horto-limeira.jpg" alt="Imagem sobre o Horto de limeira">
+                </div>
+                <div class="turismo-miniatura">
+                    <img src="imagens/horto (1).png" alt="Imagem sobre o Horto de Limeira">
+                    <img src="imagens/horto (2).png" alt="Imagem sobre o Horto de Limeira">
+                    <img src="imagens/horto (3).png" alt="Imagem sobre o Horto de Limeira">
+                    <img src="imagens/horto (4).png" alt="Imagem sobre o Horto de Limeira">
+                    <img src="imagens/horto (5).png" alt="Imagem sobre o Horto de Limeira">
+                    <img src="imagens/horto (6).png" alt="Imagem sobre o Horto de Limeira">
+
+                </div>
             </div>
         </section>
 
         <section class="grid-turismo">
             <div>
-                <img src="imagens/museu-limeira.jpg" alt="Imagem sobre o Municipio de limeira">
                 <h2>Museu Histórico Major José Levy Sobrinho</h2>
                 <p>Localizado em um belo casarão antigo, o museu preserva a história de Limeira e da região. Seu acervo
                     conta com objetos, documentos e fotografias que remontam ao passado da cidade, desde a época da
                     imigração até o desenvolvimento industrial. É um local importante para entender a formação de
                     Limeira.</p>
-            </div>
+                <div class="turismo-destaque">
+                    <img src="imagens/museu-limeira.jpg" alt="Imagem sobre o Museu de limeira">
+                </div>
+                <div class="turismo-miniatura">
+                    <img src="imagens/museu (1).png" alt="Imagem sobre o Museu de limeira">
+                    <img src="imagens/museu (2).png" alt="Imagem sobre o Museu de limeira">
+                    <img src="imagens/museu (3).png" alt="Imagem sobre o Museu de limeira">
+                    <img src="imagens/museu (4).png" alt="Imagem sobre o Museu de limeira">
+                    <img src="imagens/museu (6).png" alt="Imagem sobre o Museu de limeira">
+                    <img src="imagens/museu (5).png" alt="Imagem sobre o Museu de limeira">
+                </div>
         </section>
 
         <section class="grid-turismo">
             <div>
-                <img src="imagens/praca.jpg" alt="Imagem sobre o Municipio de limeira">
                 <h2>Praça Toledo Barros</h2>
                 <p>Uma das praças mais tradicionais e movimentadas de Limeira, a Praça Toledo Barros é um ponto de
                     referência no centro da cidade. Arborizada e com bancos, é um local agradável para sentar, observar
                     o movimento e apreciar a arquitetura do entorno. Muitas vezes sedia eventos culturais e feiras.</p>
+
+                    <div class="turismo-destaque">
+                        <img src="imagens/praca-toledo-barros.jpg" alt="Imagem sobre a Praça Toledo de Barros">
+                    </div>
+                    <div class="turismo-miniatura">
+                        <img src="imagens/praca-toledo-barros (1).png" alt="Imagem sobre a Praça Toledo de Barros">
+                        <img src="imagens/praca-toledo-barros (2).png" alt="Imagem sobre a Praça Toledo de Barros">
+                        <img src="imagens/praca-toledo-barros (3).png" alt="Imagem sobre a Praça Toledo de Barros">
+                        <img src="imagens/praca-toledo-barros (4).png" alt="Imagem sobre a Praça Toledo de Barros">
+                        <img src="imagens/praca-toledo-barros (8).png" alt="Imagem sobre a Praça Toledo de Barros">
+                        <img src="imagens/praca-toledo-barros (7).png" alt="Imagem sobre a Praça Toledo de Barros">
+
+                    </div>
             </div>
         </section>
 
         <section class="grid-turismo">
             <div>
-                <img src="imagens/shopping.jpg" alt="Imagem sobre o Municipio de limeira">
                 <h2>Shopping Pátio Limeira</h2>
                 <p>Para quem busca compras, entretenimento e gastronomia, o Shopping Pátio Limeira é uma excelente
                     opção. Conta com diversas lojas, praça de alimentação variada, cinemas e eventos sazonais. É um
                     ponto de encontro e lazer para os moradores da cidade e região.</p>
+                <div class="turismo-destaque">
+                    <img src="imagens/shopping.jpg" alt="Imagem sobre o Shopping Patio de limeira">
+                </div>
+                <div class="turismo-miniatura">
+                    <img src="imagens/shopping-patio (1).png" alt="Imagem sobre o Shopping Patio de limeira">
+                    <img src="imagens/shopping-patio (2).png" alt="Imagem sobre o Shopping Patio de limeira">
+                    <img src="imagens/shopping-patio (3).png" alt="Imagem sobre o Shopping Patio de limeira">
+                    <img src="imagens/shopping-patio (4).png" alt="Imagem sobre o Shopping Patio de limeira">
+                    <img src="imagens/shopping-patio (5).png" alt="Imagem sobre o Shopping Patio de limeira">
+                    <img src="imagens/shopping-patio (6).png" alt="Imagem sobre o Shopping Patio de limeira">
+                </div>
             </div>
         </section>
 
