Aula 02/06/2025 - Atualizaçao da pagina Convenio, inclusao e formataçao dos icones no css. Atualizaçao de arquivos na pasta site-limeira, correçao de formataçao de codigo html

--- a/aulas/convenio.html
+++ b/aulas/convenio.html
@@ -16,40 +16,50 @@
     <main>
         <section class="destaque">
             <h1>Convenios Medicos da Clinica XyZ</h1>
-            <p>Convenios Atendidos Pela Nossa Clinica</p>
+            <h3>Convenios Atendidos Pela Nossa Clinica</h3>
         </section>
 
         <section class="grid-convenios">
-            <div class="card">
+            <div>
                 <i class="bi bi-clipboard2-pulse-fill"></i>
-                <p>Convenio da Prefeitura</p>
-
+                <h2>Convenio da Prefeitura</h2>
+            </div>
+            <div>
                 <i class="bi bi-clipboard-heart"></i>
-                <p>Uniao dos Medicos do Brasil</p>
-
+                <h2>Uniao dos Medicos do Brasil</h2>
+            </div>
+            <div>
                 <i class="bi bi-clipboard2-check-fill"></i>
-                <h3>Plano de Saude do Estado</h3>
-                
+                <h2>Plano de Saude do Estado</h2>
+            </div>
+            <div>    
                 <i class="bi bi-clipboard2-heart"></i>
-                <h3>Plano de Saude da Uniao</h3>
-
+                <h2>Plano de Saude da Uniao</h2>
+            </div>
+            <div>
                 <i class="bi bi-file-medical"></i>
-                <h3>Convenio XyZ</h3>
-
+                <h2>Convenio XyZ</h2>
+            </div>
+            <div>
                 <i class="bi bi-journal-bookmark-fill"></i>
-                <h3>Convenio SUS</h3>
-
+                <h2>Convenio SUS</h2>
+            </div>
+            <div>
                 <i class="bi bi-person-badge"></i>
-                <h3>Plano de Saude de Limeira</h3>
-
+                <h2>Plano de Saude de Limeira</h2>
+            </div>
+            <div>
                 <i class="bi bi-bookmark-x-fill"></i>
-                <h3>Plano de Saude Dos Bons</h3>
-
+                <h2>Plano de Saude Dos Bons</h2>
+            </div>
+            <div>
                 <i class="bi bi-journal-bookmark"></i>
-                <h3>Plano de Saude de Piracicaba</h3>
-
+                <h2>Plano de Saude de Piracicaba</h2>
+            </div>
+            <div>
                 <i class="bi bi-file-earmark-text"></i>
-                <h3>Plano de Saude doe Campinas</h3>
+                <h2>Plano de Saude doe Campinas</h2>
+            </div>
         </section>
 
         <section class="voltar">
