--- a/site-limeira/index.html
+++ b/site-limeira/index.html
@@ -20,6 +20,8 @@ Botões com links para as páginas e perfis nas redes sociais. -->
         <img src="imagens/cabecalho-bandeira.png" alt="Logo com a bandeira de limeira">
     </header>
 
+<img class="banner" src="imagens/banner-limeira.png" alt="">
+
     <main>
        <section class="destaque">
             <h1>Conheça Limeira - A Joia do Interior de SP!</h1>
