Atualizaçao 09/06/2025 -correçao de codigo HTML das paginas, formataçao de CSS das paginas agendamento, conveio, especialiades. Correçao de linhas e formataçao

--- a/aulas/convenio.html
+++ b/aulas/convenio.html
@@ -15,7 +15,7 @@
     </header>
     <main>
         <section class="destaque">
-            <h1>Convenios Medicos da Clinica XyZ</h1>
+            <h1>Clinica XyZ</h1>
             <h3>Convenios Atendidos Pela Nossa Clinica</h3>
         </section>
 
