--- a/aulas/especialidades.html
+++ b/aulas/especialidades.html
@@ -15,8 +15,8 @@
     </header>
     <main>
         <section class="destaque">
-            <h1>Especialidades Medicas</h1>
-            <p>Veja as Especialidades Medicas que Atendemos em Nossa Clinica</p>
+            <h1>Clinica XyZ</h1>
+            <p>Especialidades Medicas que Atendemos em Nossa Clinica</p>
         </section>
 
         <section class="grid-especialidades">
