--- a/aulas/index.html
+++ b/aulas/index.html
@@ -41,7 +41,7 @@
             <a href="servicos.html">
                 <div class="card">
                     <img src="imagens/Servicos.png" alt="Imagem de planilhas de servicos">
-                    <h3>Servicos</h3>
+                    <h3>Serviços</h3>
                     <p>Lista de serviços em formato de tabelas de preços</p>
                 </div>
             </a>
@@ -49,7 +49,7 @@
             <a href="convenio.html">
                 <div class="card">
                     <img src="imagens/Convenio.png" alt="Imagem de convenios da clinica">
-                    <h3>Convenio</h3>
+                    <h3>Convênio</h3>
                     <p>Lista de convênios aceitos nas consultas medicas</p>
                 </div>
             </a>
@@ -65,7 +65,7 @@
             <a href="video.html">
                 <div class="card">
                     <img src="imagens/Video.png" alt="Imagem do card de videos">
-                    <h3>Videos</h3>
+                    <h3>Vídeos</h3>
                     <p>Videos explicativos dos nossos procedimentos</p>
                 </div>
             </a>
