--- a/aulas/agendamento.html
+++ b/aulas/agendamento.html
@@ -15,11 +15,42 @@
     </header>
     <main>
         <section class="destaque">
-            <h1>Agendamento Medico da Clinica XyZ</h1>
-            <p>Agendamento Medico em Nossa Clinica</p>
+            <h1>Clinica XyZ</h1>
+            <p>Agendamento de Especialidades em Nossa Clinica</p>
         </section>
 
-        <section class="grid-agendamento">
+        <section class="agendamento">
+            <form action="" method="post" name="form-agendamento" id="form-agendamento">
+                <div class="form-group">
+                    <div>
+                        <label for="">Selecione a Data: </label>
+                        <input type="date" id="data" name="data" required>
+                    </div>
+                    <div>
+                        <label for="">Selecione a Hora: </label>
+                        <input type="time" id="hora" name="hora" required>
+                    </div>
+                    <div>
+                        <label for="">Selecione a Especialidade: </label>
+                        <select name="especialidade" id="especialidade">
+                            <option>- - - - -</option>
+                            <option>Cardiologia</option>
+                            <option>Geriatria</option>
+                            <option>Ortopedia</option>
+                            <option>Otorrino</option>
+                            <option>Pediatria</option>
+                            <option>Psicologo</option>
+                        </select>
+                    </div>
+                </div>
+                <div>
+                    <label for="">Nome Completo: </label>
+                    <input type="text" id="nome" name="nome" required>
+                </div>
+                <div>
+                    <input type="submit" value="Confirmar Agendamento" name="confirmar">
+                </div>
+            </form>
  
         </section>
 
