Atualizaçao do site-limeira, correçao de codigos, formataçao CSS, criaçao da pagina contato, inclusao de botao de açao

--- a/site-limeira/comercio.html
+++ b/site-limeira/comercio.html
@@ -77,14 +77,15 @@ Shopping, Principais supermercados, Outros pontos comerciais relevantes -->
             <a href="index.html"><i class="bi bi-arrow-left-circle-fill"></i> Voltar</a>
         </section>
 
-        <h2>Acesse Nossa Redes</h2>
+        <!-- <h2>Entre em Contato</h2>
         <section class="redes-sociais">
+            <a href="contato.html" target="_blank"><i class="bi bi-envelope-at-fill"></i> Contato</a>
             <a href="https://facebook.com" target="_blank"><i class="bi bi-facebook"></i> Facebook</a>
             <a href="https://youtube.com" target="_blank"><i class="bi bi-youtube"></i> Youtube</a>
             <a href="https://instagram.com" target="_blank"><i class="bi bi-instagram"></i> Instagram</a>
             <a href="https://whatsapp.com" target="_blank"><i class="bi bi-whatsapp"></i> Whatsapp</a>
             <a href="https://tiktok.com" target="_blank"><i class="bi bi-tiktok"></i> TikTok</a>
-        </section>
+        </section> -->
 
     </main>
     <footer>
