--- a/site-limeira/index.html
+++ b/site-limeira/index.html
@@ -73,14 +73,14 @@ Botões com links para as páginas e perfis nas redes sociais. -->
                 </div>
             </a>
         </section>
-
-        <h2>Acesse Nossa Redes</h2>
+        
         <section class="redes-sociais">
             <a href="https://facebook.com" target="_blank"><i class="bi bi-facebook"></i> Facebook</a>
             <a href="https://youtube.com" target="_blank"><i class="bi bi-youtube"></i> Youtube</a>
             <a href="https://instagram.com" target="_blank"><i class="bi bi-instagram"></i> Instagram</a>
             <a href="https://whatsapp.com" target="_blank"><i class="bi bi-whatsapp"></i> Whatsapp</a>
             <a href="https://tiktok.com" target="_blank"><i class="bi bi-tiktok"></i> TikTok</a>
+            <a href="contato.html" target="_blank"><i class="bi bi-envelope-at-fill"></i> Contato</a>
         </section>
     </main>
 
