--- a/site-limeira/municipio.html
+++ b/site-limeira/municipio.html
@@ -57,14 +57,14 @@
             <a href="index.html"><i class="bi bi-arrow-left-circle-fill"></i> Voltar</a>
         </section>
 
-        <h2>Acesse Nossa Redes</h2>
+        <!-- <h2>Acesse Nossa Redes</h2>
         <section class="redes-sociais">
             <a href="https://facebook.com" target="_blank"><i class="bi bi-facebook"></i> Facebook</a>
             <a href="https://youtube.com" target="_blank"><i class="bi bi-youtube"></i> Youtube</a>
             <a href="https://instagram.com" target="_blank"><i class="bi bi-instagram"></i> Instagram</a>
             <a href="https://whatsapp.com" target="_blank"><i class="bi bi-whatsapp"></i> Whatsapp</a>
             <a href="https://tiktok.com" target="_blank"><i class="bi bi-tiktok"></i> TikTok</a>
-        </section>
+        </section> -->
 
     </main>
     <footer>
